--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2>Entre em contato comigo</h2>
         <div>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/Rodrigo1010-01">GitHub</a>
+            <a href="https://github.com/agt-321">GitHub</a>
         </div>
         <p class="my-5 text-center">© Copyright 2025. Produzido por Agatha</p>
     </footer>
